hphp/hack/test/typecheck/new_inference/eager_solve/obj_get_widen.php.like_types.exp
File "obj_get_widen.php", line 15, characters 13-14:
Invalid argument (Typing[4110])
File "obj_get_widen.php", line 14, characters 44-46:
Expected Tv1
File "obj_get_widen.php", line 14, characters 26-28:
But got dynamic because it is an unenforceable type
File "obj_get_widen.php", line 22, characters 18-18:
No member 'x' in C (did you mean 'y'?) (Typing[4053])
File "obj_get_widen.php", line 18, characters 33-33:
This is why I think it is an object of type C
File "obj_get_widen.php", line 10, characters 7-7:
Declaration of C is here
File "obj_get_widen.php", line 22, characters 27-27:
No member 'y' in B (did you mean 'x'?) (Typing[4053])
File "obj_get_widen.php", line 18, characters 27-27:
This is why I think it is an object of type B
File "obj_get_widen.php", line 8, characters 7-7:
Declaration of B is here
